# cpp-raii-and-ownership

./: .gitignore  CMakeLists.txt  README.md  cpp-raii-and-ownership.sln  cpp-raii-and-ownership.vcxproj  cpp-raii-and-ownership.vcxproj.filters
.github/workflows/: build.yml
include/: scoped_file.h  scoped_timer.h
src/: main.cpp  scoped_file.cpp  scoped_timer.cpp
